# algorummy

./: .gitignore  CMakeLists.txt  README.md  Ubuntu.xcs
config/: core10.json  core3.json  core5.json  core6.json  core7.json  script.json  script11.json  script13.json
data/: core1.json  core11.json  core12.json  core13.json  core14.json  core15.json  core16.json  core2.json  core4.json  core6.json  core8.json  script.json
src/: RummyConfig.h  RummyConfig.h.in  gamerummy.cpp  gamerummy.cpp_1  gamerummy.h  gamerummy.h_1  init.cpp  init.h  main.cpp
